fixed text overflow class info

--- a/react-app/src/components/EditFlashcards/EditFlashcards.css
+++ b/react-app/src/components/EditFlashcards/EditFlashcards.css
@@ -84,6 +84,7 @@
 
 #header-left-class {
     display: flex;
+    max-width: 100%;
     align-items: center;
     gap: 5px;
     font-size: 12px;
@@ -102,6 +103,14 @@
     border-radius: 3px;
 }
 
+#header-left-class-name {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: left;
+    max-width: 94%;
+}
+
 #decks-drop-down {
     display: flex;
     align-items: center;
@@ -116,8 +125,8 @@
 #decks-drop-down p {
     white-space: nowrap;
     overflow: hidden;
-    width: 100px;
     text-overflow: ellipsis;
+    max-width: 300px;
 }
 
 #decks-drop-down i {
